Fixed up GarbageCollectionTest
Added metadata file references to each GarbageCollectionEnvironment
instance, updated TestGCE.getCandidateTableIDs() to match GCRun.